# sysview-cli

./: LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  requirements.txt  setup.py
sysview/: __init__.py  __main__.py  cli.py  dashboard.py  export.py  post_install.py  system_info.py
