[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sysview-cli"
version = "1.0.0"
description = "Beautiful terminal system monitor with colorful graphics and intuitive interface"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "for-test0x", email = "for-test0x@for-test0x.com"},
]
keywords = ["system", "monitor", "terminal", "tui", "dashboard", "cpu", "ram", "disk", "network", "linux", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "machinecheckstatus",
]

[project.urls]
Homepage = "https://github.com/for-test0x/sysview-cli"
Repository = "https://github.com/for-test0x/sysview-cli"
Issues = "https://github.com/for-test0x/sysview-cli/issues"

[project.scripts]
sysview = "sysview.cli:main"
